--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       								<li><img src="assets/img/image 7.png" alt=""><i class="fa fa-angle-down" aria-hidden="true"></i>
         								<div class="triangle"></div>
     									<ul>
-								          <li class="img__language>
+								          <li class="img__language">
 								          	<img" src="assets/img/image 7.png" alt="">
 								          	<div id="russian"></div>
 								          	<span class="active">Русскый</span>
 								          </li>
-								          <li class="img__language>
+								          <li class="img__language">
 								          	<img src="assets/img/image 7.png" alt="">
 								          	<div id="English"></div>
 								          	<span>English</span></li>      
