--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					<a href="#">
 						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/ic_sharp-agriculture.png" alt="">
+	  							<img src="assets/img/mdi_industrial.svg" alt="">
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Сельское <br> хозяйство</p>
