--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
 					<a href="#">
 						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/mdi_industrial.svg" alt="">
+	  							<svg width="72" height="72" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M12 54V60H24V54H12ZM12 42V48H42V42H12ZM30 54V60H42V54H30ZM48 42V48H60V42H48ZM48 54V60H60V54H48ZM6 66V24L21 36V24L36 36V24L51 36L54 6H63L66 36V66H6Z" fill="#FFB800"/>
+</svg>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Сельское <br> хозяйство</p>
