--- a/index.html
+++ b/index.html
@@ -188,9 +188,7 @@
 					<a href="#">
 						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<svg width="72" height="72" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M12 54V60H24V54H12ZM12 42V48H42V42H12ZM30 54V60H42V54H30ZM48 42V48H60V42H48ZM48 54V60H60V54H48ZM6 66V24L21 36V24L36 36V24L51 36L54 6H63L66 36V66H6Z" fill="#FFB800"/>
-</svg>
+	  							<i class="fa-solid fa-tractor"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Сельское <br> хозяйство</p>
@@ -201,7 +199,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/mdi_industrial.png" alt="">
+	  							<i class="fa-solid fa-industry-windows"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Промышленность</p>
@@ -212,7 +210,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/bi_building-fill.png" alt="">
+	  							<i class="fa-solid fa-building"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Строительство</p>
@@ -223,7 +221,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/mdi_cart.png" alt="">
+	  							<i class="fa-solid fa-cart-shopping" style="color: #f01000;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Торговля</p>
@@ -234,7 +232,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/mdi_car-estate.png" alt="">
+	  							<i class="mdi mdi-car-estate" style="color: #f01000;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Транспорт</p>
@@ -245,7 +243,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/maki_communications-tower.png" alt="">
+	  							<i class="fa-solid fa-tower-cell"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Коммуникация</p>
@@ -256,7 +254,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/grommet-icons_services.png" alt="">
+	  							<i class="fa-thin fa-gears"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Услуги</p>
@@ -267,7 +265,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/map_finance.png" alt="">
+	  							<i class="fa-solid fa-money-bill-wave"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Финансы</p>
@@ -278,7 +276,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/tdesign_education.png" alt="">
+	  							<i class="fa-solid fa-graduation-cap"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Образование</p>
@@ -289,7 +287,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/fluent-mdl2_health-solid.png" alt="">
+	  							<i class="fa-solid fa-heart-pulse"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Здравоохранение</p>
@@ -300,7 +298,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/mdi_people-group.png" alt="">
+	  							<i class="fa-solid fa-people-group"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Социальная <br> статистика</p>
@@ -311,7 +309,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/material-symbols-light_family-restroom-sharp.png" alt="">
+	  							<i class="fa-sharp fa-thin fa-family-dress"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Демография</p>
@@ -322,7 +320,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/carbon_finance.png" alt="">
+	  							<i class="fa-sharp fa-light fa-building-columns"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>СНС</p>
@@ -333,7 +331,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/pajamas_work.png" alt="">
+	  							<i class="fa-regular fa-briefcase"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Труд</p>
@@ -344,7 +342,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<img src="assets/img/tdesign_list.png" alt="">
+	  							<i class="fa-solid fa-list"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Все индикаторы</p>
