--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-industry-windows"></i>
+	  							<i class="fa-solid fa-industry" style="color: #FFD43B;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Промышленность</p>
@@ -210,7 +210,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-building"></i>
+	  							<i class="fa-solid fa-building" style="color: #7A15F7;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Строительство</p>
@@ -232,7 +232,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="mdi mdi-car-estate" style="color: #f01000;"></i>
+	  							<i class="fa-solid fa-van-shuttle" style="color: #00BC8B;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Транспорт</p>
@@ -243,7 +243,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-tower-cell"></i>
+	  							<i class="fa-solid fa-tower-cell" style="color: #475F7B;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Коммуникация</p>
@@ -254,7 +254,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-thin fa-gears"></i>
+	  							<i class="fa-solid fa-gears" style="color: #FFD43B;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Услуги</p>
@@ -265,7 +265,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-money-bill-wave"></i>
+	  							<i class="fa-solid fa-money-bill-wave" style="color: #7A15F7;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Финансы</p>
@@ -276,7 +276,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-graduation-cap"></i>
+	  							<i class="fa-solid fa-graduation-cap" style="color: #f01000;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Образование</p>
@@ -287,7 +287,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-heart-pulse"></i>
+	  							<i class="fa-solid fa-heart-pulse" style="color: #00BC8B;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Здравоохранение</p>
@@ -298,7 +298,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-people-group"></i>
+	  							<i class="fa-solid fa-people-group" style="color: #475F7B;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Социальная <br> статистика</p>
@@ -309,7 +309,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-sharp fa-thin fa-family-dress"></i>
+	  							<i class="fa-regular fa-id-card" style="color: #0F5EF7;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Демография</p>
@@ -320,7 +320,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-sharp fa-light fa-building-columns"></i>
+	  							<i class="fa-solid fa-building-columns" style="color: #FFD43B;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>СНС</p>
@@ -331,7 +331,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-regular fa-briefcase"></i>
+	  							<i class="fa-solid fa-briefcase" style="color: #7A15F7;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Труд</p>
@@ -342,7 +342,7 @@
   					<a href="#">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-list"></i>
+	  							<i class="fa-solid fa-list" style="color: #475F7B;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Все индикаторы</p>
