--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					<h2>Для получения данных выберите показатель</h2>
 				</div>
 				<div class="block__indicator__items">
-					<a href="#">
+					<a href="#" class="block__tractor">
 						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-tractor"></i>
