--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 	  					</div>
 					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__industry">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-industry" style="color: #FFD43B;"></i>
