--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					<a href="#" class="block__tractor">
 						<div class="blocks__indicator">
 	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-tractor"></i>
+	  							<i class="fa-solid fa-tractor" style="color: #0F5EF7;"></i>
 	  						</div>
 	  						<div class="indicator__info">
 	  							<p>Сельское <br> хозяйство</p>
@@ -207,7 +207,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__building">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-building" style="color: #7A15F7;"></i>
@@ -218,7 +218,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__shopping">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-cart-shopping" style="color: #f01000;"></i>
@@ -229,7 +229,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__shuttle">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-van-shuttle" style="color: #00BC8B;"></i>
@@ -240,7 +240,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__tower">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-tower-cell" style="color: #475F7B;"></i>
@@ -251,7 +251,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__gears">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-gears" style="color: #FFD43B;"></i>
@@ -262,7 +262,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__money">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-money-bill-wave" style="color: #7A15F7;"></i>
@@ -273,7 +273,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__graduation">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-graduation-cap" style="color: #f01000;"></i>
@@ -284,7 +284,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__heart">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-heart-pulse" style="color: #00BC8B;"></i>
@@ -295,7 +295,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__group">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-people-group" style="color: #475F7B;"></i>
@@ -306,7 +306,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__card">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-regular fa-id-card" style="color: #0F5EF7;"></i>
@@ -317,7 +317,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__buildings">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-building-columns" style="color: #FFD43B;"></i>
@@ -328,7 +328,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__briefcase">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-briefcase" style="color: #7A15F7;"></i>
@@ -339,7 +339,7 @@
 	  					</div>
   					</a>
 
-  					<a href="#">
+  					<a href="#" class="block__list">
   						<div class="blocks__indicator">
 	  						<div class="indicator__image">
 	  							<i class="fa-solid fa-list" style="color: #475F7B;"></i>
