--- a/index.html
+++ b/index.html
@@ -187,166 +187,196 @@
 				<div class="block__indicator__items">					
 					<a href="#" class="block__tractor">
 						<div class="blocks__indicator">							
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-tractor" style="color: #0F5EF7;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Сельское <br> хозяйство</p>
-	  						</div>		  					
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-tractor" style="color: #0F5EF7;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Сельское <br> хозяйство</p>
+		  						</div>	
+	  						</div>	  					
 	  					</div>
   					</a>
 					
 
   					<a href="#" class="block__industry">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-industry" style="color: #FFD43B;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Промышленность</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-industry" style="color: #FFD43B;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Промышленность</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__building">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-building" style="color: #7A15F7;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Строительство</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-building" style="color: #7A15F7;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Строительство</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__shopping">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-cart-shopping" style="color: #f01000;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Торговля</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-cart-shopping" style="color: #f01000;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Торговля</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__shuttle">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-van-shuttle" style="color: #00BC8B;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Транспорт</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-van-shuttle" style="color: #00BC8B;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Транспорт</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__tower">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-tower-cell" style="color: #475F7B;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Коммуникация</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-tower-cell" style="color: #475F7B;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Коммуникация</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__gears">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-gears" style="color: #FFD43B;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Услуги</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-gears" style="color: #FFD43B;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Услуги</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__money">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-money-bill-wave" style="color: #7A15F7;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Финансы</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-money-bill-wave" style="color: #7A15F7;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Финансы</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__graduation">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-graduation-cap" style="color: #f01000;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Образование</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-graduation-cap" style="color: #f01000;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Образование</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__heart">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-heart-pulse" style="color: #00BC8B;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Здравоохранение</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-heart-pulse" style="color: #00BC8B;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Здравоохранение</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__group">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-people-group" style="color: #475F7B;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Социальная <br> статистика</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-people-group" style="color: #475F7B;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Социальная <br> статистика</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__card">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-regular fa-id-card" style="color: #0F5EF7;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Демография</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-regular fa-id-card" style="color: #0F5EF7;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Демография</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__buildings">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-building-columns" style="color: #FFD43B;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>СНС</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-building-columns" style="color: #FFD43B;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>СНС</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__briefcase">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-briefcase" style="color: #7A15F7;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Труд</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-briefcase" style="color: #7A15F7;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Труд</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
 
   					<a href="#" class="block__list">
   						<div class="blocks__indicator">
-	  						<div class="indicator__image">
-	  							<i class="fa-solid fa-list" style="color: #475F7B;"></i>
-	  						</div>
-	  						<div class="indicator__info">
-	  							<p>Все индикаторы</p>
+	  						<div class="items">
+	  							<div class="indicator__image">
+		  							<i class="fa-solid fa-list" style="color: #475F7B;"></i>
+		  						</div>
+		  						<div class="indicator__info">
+		  							<p>Все индикаторы</p>
+		  						</div>
 	  						</div>
 	  					</div>
   					</a>
