--- a/index.html
+++ b/index.html
@@ -27,25 +27,27 @@
 					</div>
 					<div class="header__language">
 						<div class="nav-wrapper">
-  							<div class="sl-nav">
-     							Язык:
-    							<ul>
-      								<li><img src="assets/img/image 7.png" alt=""><i class="fa fa-angle-down" aria-hidden="true"></i>
-        								<div class="triangle"></div>
-    									<ul>
-								          <li class="img__language">
-								          	<img" src="assets/img/image 7.png" alt="">
-								          	<div id="russian"></div>
-								          	<span class="active">Русскый</span>
-								          </li>
-								          <li class="img__language">
-								          	
-								          	<div id="English"></div>
-								          	<span>English</span></li>      
-    									</ul>
-      								</li>
-    							</ul>
-  							</div>
+  							<ul class="nav">
+  								<li class="button-dropdown">
+    								<a href="javascript:void(0)" class="dropdown-toggle">
+      									Язык:<img src="assets/img/image 7.png" alt=""><i class="fa fa-angle-down" aria-hidden="true"></i>
+    								</a>
+    								<ul class="dropdown-menu">
+      									<li>
+        									<a href="#">
+          										<img src="assets/img/image 7.png" alt="">
+          										Русскый
+        									</a>
+      									</li>
+      									<li>
+        									<a href="#">
+          										<img class="flag__en" src="assets/img/flag-round-250.png" alt="">
+          										English
+        									</a>
+      									</li>
+    								</ul>
+  								</li>
+							</ul>
 						</div>
 					</div>
 				</div>
